<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/custom_dialog_bg"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/title_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:paddingTop="30dp"
            android:text="@string/sort"
            android:textColor="@android:color/black"
            android:textSize="16dp"/>

        <RadioGroup
            android:id="@+id/short_RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_TextView"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <slybars.launches.ui.custom.CustomFontRadioButton
                android:id="@+id/sort_time_min_to_max_RadioButton"
                style="@style/AppTheme.RadioButton"
                android:tag="1"
                android:text="@string/sort_time_min_to_max" />

            <slybars.launches.ui.custom.CustomFontRadioButton
                android:id="@+id/sort_time_max_to_min_RadioButton"
                style="@style/AppTheme.RadioButton"
                android:tag="2"
                android:text="@string/sort_time_max_to_min" />

        </RadioGroup>

    </RelativeLayout>

</RelativeLayout>