<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--TOOLBAR-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_gravity="top"
        android:background="@color/colorPrimary"
        android:elevation="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back_Button"
            android:text="@string/launch_toolbar_title"
            android:textColor="@android:color/white"
            android:textSize="17dp"
            android:fontFamily="@font/roboto_medium"/>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/filter_and_sort_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/toolbar_main"
        android:background="@android:color/white"
        android:gravity="center"
        android:visibility="gone"
        android:weightSum="2">

        <Button
            android:id="@+id/filter_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TextButton"
            android:layout_weight="1"
            android:text="@string/filter"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="28dp"
            android:background="@color/dividerColor" />

        <Button
            android:id="@+id/sort_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TextButton"
            android:layout_weight="1"
            android:text="@string/sort"/>
    </LinearLayout>

    <ListView
        android:id="@+id/launch_ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/filter_and_sort_LinearLayout"
        android:overScrollMode="always"
        android:background="@android:color/white"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="?attr/selectableItemBackground" />

    <View
        android:id="@+id/divider_View"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/filter_and_sort_LinearLayout"
        android:background="@color/dividerColor" />


    <!-- NO DATA TRY AGAIN VIEW -->
    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/no_data_try_again_layout"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>